# Bridges

./: .gitignore  LICENSE  README.md  package-lock.json  shell.nix
auth/: login.js  package-lock.json  package.json
bridges/: package-lock.json  package.json
bridges/src/: app.d.ts  app.html  hooks.server.ts
client/: package-lock.json  package.json
pocketbase/: package-lock.json
pocketbase/pb_data/: auxiliary.db  auxiliary.db-shm  auxiliary.db-wal  data.db  data.db-shm  data.db-wal
pocketbase/pb_hooks/: auth.js  files.js  links,js  rateLimit.js  worker.js
pocketbase/pb_migrations/: 1756930469_updated_users.js  1756965092_updated_tags.js  1756965106_updated_tags.js  1756965127_created_tags.js  1756965400_created_links.js  1757341839_updated_users.js  1757342612_updated_users.js  1757342632_deleted_users.js  1757342779_created_users.js  1757342963_updated_users.js  1757343330_updated_users.js  1757343452_updated_users.js  1757343477_updated_users.js  1757478373_updated_users.js  1757484343_updated_users.js  1757488150_created_uploads.js  1757488954_updated_uploads.js  1757489041_updated_uploads.js  1757490477_updated__superusers.js  1757490505_updated__superusers.js  1757490892_updated_users.js  1757490921_updated_users.js  1757494075_updated_uploads.js  1757494287_updated_uploads.js  1757494626_updated_uploads.js  1757494881_updated_uploads.js  1757494901_updated_uploads.js  1757494922_updated_uploads.js  1757494962_updated_uploads.js  1757495012_updated_uploads.js  (+31 more)
server/: manage.py  pyproject.toml
server/bridges/: asgi.py  settings.py  urls.py  wsgi.py
(+38 files in other folders)
