[project]
name = "Bridges"
version = "0.1.0"
description = "Django + Celery service"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.0,<6.0",
  "djangorestframework>=3.15,<4.0",
  "psycopg[binary]>=3.2,<4.0",
  "celery>=5.4,<6.0",
  "redis>=5.0,<6.0",
  "django-redis>=5.4,<6.0",
  "Pillow>=10.4,<11.0",
  "argon2-cffi>=23.1,<24.0",
  "python-dotenv>=1.0,<2.0",
  "whitenoise>=6.7,<7.0",
  "django-cors-headers>=4.4,<5.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.8",
  "ruff>=0.6",
  "mypy>=1.11",
  "django-stubs>=5.0",
  "pytest>=8.3",
  "pytest-django>=4.8",
  "ipython>=8.26",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"